# kentaraa

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  script.sh
src/kintaraa_backend/: Cargo.toml  kintaraa_backend.did
src/kintaraa_backend/src/: lib.rs  token_system.rs
src/kintaraa_frontend/: index.html  package-lock.json  package.json  vite.config.js
src/kintaraa_frontend/public/: .ic-assets.json5
src/kintaraa_frontend/src/: App.jsx  main.jsx
src/kintaraa_frontend/src/components/: Features.jsx  Hero.jsx  Navbar.jsx  ProtectedRoute.jsx  SupportServices.jsx  TestConnection.jsx  TokenManagement.jsx
src/kintaraa_frontend/src/components/auth/: ProtectedRoute.jsx
src/kintaraa_frontend/src/components/common/: Header.jsx
src/kintaraa_frontend/src/components/forms/: IncidentReportForm.jsx  ServiceRequestForm.jsx
src/kintaraa_frontend/src/config/: canister_env.js
src/kintaraa_frontend/src/contexts/: AuthContext.jsx
src/kintaraa_frontend/src/layouts/: ServiceLayout.jsx
src/kintaraa_frontend/src/pages/: AboutPage.jsx  AnonymousReportPage.jsx  Community.jsx  GetStarted.jsx  HomePage.jsx  KintaraaCoinsPage.jsx  Login.jsx  Register.jsx  Report.jsx  Resources.jsx  Support.jsx
src/kintaraa_frontend/src/pages/admin/: AddProvieder.jsx  Dashboard.jsx
src/kintaraa_frontend/src/pages/auth/: RegisterPage.jsx
src/kintaraa_frontend/src/pages/dashboard/: CHVDashboard.jsx  IncidentReportPage.jsx  LegalDashboard.jsx  MedicalDashboard.jsx  (+2 more)
src/kintaraa_frontend/src/services/: api.js  authService.js  serviceApi.js
(+4 files in other folders)
