[package]
name = "kintaraa_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = "0.9"
ic-cdk = "0.11"
ic-cdk-macros = "0.8"
serde = { version = "1.0", features = ["derive"] }

[target.wasm32-unknown-unknown.dependencies]
ic-cdk = "0.11"